--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "template",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts",
     "start": "node dist/server.js",
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
+    "build": "tsup src/server.ts --format esm,cjs --dts --external react"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
